- Update API version - Updated CodeMirror to 5.65.18 - Created new package version

--- a/force-app/package/codemirror/lwc/cmTextarea/cmTextarea.html
+++ b/force-app/package/codemirror/lwc/cmTextarea/cmTextarea.html
@@ -1,13 +1,4 @@
 <template>
-	<div 
-        class     = "codeMirror"
-        lwc:dom   = "manual" 
-        onkeydown = {handleSave}
-    ></div>
-	
-    <div
-        class   = "awb-code-editor_handle awb-code-editor_handle-default"
-        lwc:dom = "manual"
-        id      = "handle"
-    ></div>
+	<div class = "codeMirror" tabindex="-1"></div>
+    <div class = "awb-code-editor_handle awb-code-editor_handle-default"></div>
 </template>
