Create package 0.8 Added Wrap Text Functionallity Added LDT Test LWC Updated Documentation

--- a/force-app/package/core/lwc/ldtModal/ldtModal.html
+++ b/force-app/package/core/lwc/ldtModal/ldtModal.html
@@ -7,6 +7,7 @@
             columns                 = {ldt.columns}
             hide-checkbox-column    = {ldt.hideCheckboxColumn}
             show-row-number-column  = {ldt.showRowNumberColumn}
+            wrap-text-max-lines     = {ldt.wrapTextMaxLines}
         ></lightning-datatable>
     </lightning-modal-body>
     <lightning-modal-footer>
